[metadata]
name = tl-pyview
description-file = README.md
version = 3.6.4
description = Twinleaf Python Viewer 
long_description = Python Viewer for Twinleaf sensors
url = https://github.com/twinleaf/Twinleaf-Python-Viewer
author = Esme Rubinstein, Thomas Kornack
author_email = rubinstein@twinleaf.com
license = MIT

[options]
python_requires = >=3.6
packages =
	tlplot

install_requires =
	tio
	tkinter

[options.entry_points]
console_scripts =
	tl-pyview = tl-pyview-scripts.tl-pyview:main
