[metadata]
name = tl_pyview
description-file = README.md
version = 3.6.4
description = Twinleaf Python Viewer 
long_description = Python Viewer for Twinleaf sensors
url = https://github.com/twinleaf/Twinleaf-Python-Viewer
author = Esme Rubinstein, Thomas Kornack
author_email = rubinstein@twinleaf.com
license = MIT

[options]
python_requires = >=3.6
packages =
	tl_plot
	tl_pyview_scripts

install_requires =
	tio

[options.entry_points]
console_scripts =
	tl_pyview = tl_pyview_scripts.tl_pyview:main
