[metadata]
name = tio-viewer
description-file = README.md
version = 0.1
description = Twinleaf Python Viewer 
long_description = Python live graphical viewer for data from Twinleaf sensors using the tio protocol. 
url = https://github.com/twinleaf/tio-python-viewer
author = Esme Rubinstein, Thomas Kornack
author_email = rubinstein@twinleaf.com
license = MIT

[options]
python_requires = >=3.6
packages =
	tlpyplot
	tlpyplottools

install_requires =
	tio
	matplotlib
	scipy

[options.entry_points]
console_scripts =
	tioview = tlpyplottools.tioview:main
	vm_monitor = tlpyplottools.vm_monitor:main
	cb_view = tlpyplottools.cb_view:main
